# serial-rs

serial-core/: Cargo.toml
serial-core/src/: lib.rs
serial-unix/: Cargo.toml
serial-unix/examples/: poll.rs
serial-unix/src/: error.rs  tty.rs
serial-windows/: Cargo.toml
serial-windows/src/: com.rs  error.rs  ffi.rs  lib.rs
